젠킨스 2센터 등록(ver 1.0.20 > 1.0.21)